[M]add gui stuff